Fix: Resolve text overflow issue in the badge's background
Resolve text overflow issue in the badge's background due to fixed width
of the badge.

--- a/static/css/contribute.css
+++ b/static/css/contribute.css
@@ -37,7 +37,7 @@ input[type='file'] {
 }
 
 .badge {
-    width: 30%;
+    width: default;
     margin-bottom: 2%;
     font-size: 15px;
 }
